# Austin-Animal-Center-Pipeline

./: .env  .gitignore  README.md  docker-compose.yml  instructions.md  main.py  pyproject.toml
dbt/austin_animal_center/: dbt_project.yml
dbt/austin_animal_center/models/marts/: fct_animal_stays.sql  schema.yml
dbt/austin_animal_center/models/staging/: schema.yml  stg_intakes.sql  stg_outcomes.sql
kestra/: deploy_kestra.py
kestra/flows/: 01_ingestion.yml  02_gcp_bq.yml  03_gcp_dbt.yml  04_master_pipeline.yml
scripts/: ingest_animals.py
terraform/: variables.tf
